--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "lighthouse": "lighthouse urlHere --view"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
+    "browser-monads": "^1.0.0",
     "gatsby": "^2.24.62",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-sitemap": "^2.4.13",
+    "gatsby-source-sanity": "^6.0.4",
     "gatsby-transformer-sharp": "^2.5.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
