--- a/studio/package.json
+++ b/studio/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^1.150.7",
+    "@sanity/cli": "^1.150.7",
     "@sanity/components": "^1.150.7",
     "@sanity/core": "^1.150.7",
     "@sanity/default-layout": "^1.150.7",
