--- a/web/package.json
+++ b/web/package.json
@@ -13,21 +13,21 @@
     "lighthouse": "lighthouse urlHere --view"
   },
   "dependencies": {
-    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/block-content-to-react": "^3.0.0",
     "browser-monads": "^1.0.0",
-    "gatsby": "^3.0.4",
-    "gatsby-image": "^2.4.19",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.1",
-    "gatsby-plugin-sitemap": "^3.0.0",
-    "gatsby-source-sanity": "^6.0.5",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby": "^3.7.1",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-sitemap": "^4.3.1",
+    "gatsby-source-sanity": "^7.0.7",
+    "gatsby-transformer-sharp": "^3.7.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^10.0.0"
   }
 }
