--- a/studio/package.json
+++ b/studio/package.json
@@ -18,6 +18,7 @@
     "@sanity/cli": "^2.11.0",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.11.0",
+    "@sanity/dashboard": "^2.10.5",
     "@sanity/default-layout": "^2.11.1",
     "@sanity/default-login": "^2.11.1",
     "@sanity/desk-tool": "^2.11.1",
@@ -25,7 +26,9 @@
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-barcode": "^1.4.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
+    "sanity-plugin-media": "^1.3.1"
   },
   "devDependencies": {}
 }
