--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,10 @@
     "gatsby-transformer-sharp": "^3.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.32.0",
+    "react-responsive": "^8.2.0",
+    "react-use-scroll": "^1.0.3"
   },
   "devDependencies": {
     "dotenv": "^10.0.0"
