--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,12 @@
     "lighthouse": "lighthouse urlHere --view"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "browser-monads": "^1.0.0",
     "gatsby": "^3.7.1",
+    "gatsby-plugin-emotion": "^6.7.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
@@ -28,7 +31,9 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.32.0",
     "react-responsive": "^8.2.0",
-    "react-use-scroll": "^1.0.3"
+    "react-use-scroll": "^1.0.3",
+    "tailwindcss": "^2.1.4",
+    "twin.macro": "^2.5.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0"
