--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "react-intersection-observer": "^8.32.0",
     "react-responsive": "^8.2.0",
     "react-use-scroll": "^1.0.3",
+    "swiper": "^6.7.0",
     "tailwindcss": "^2.1.4",
     "twin.macro": "^2.5.0"
   },
